# database-sqdt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.txt  README.md  generate_database.py  pyproject.toml  utils.py
.github/workflows/: generate_database.yml
src/generate_database_sqdt/: __init__.py  generate_misc.py  main.py  utils.py
tools/: ruff.toml
tools/compare/: .gitignore  README.md  compare.py  compare_matrix_elements.py  compare_states.py  compare_wigner.py  pyproject.toml
