[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "generate-database-sqdt"
dynamic = ["version"]
description = "Generate the SQDT databases for the pairinteraction package by using the ryd-numerov package."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
dependencies = [
  "ryd-numerov >= 0.7",
  "pandas[pyarrow] >= 2.2.3",
  "pairinteraction >= 2.1",
]

[tool.uv.sources]
ryd-numerov = { path = "ryd-numerov", editable = true }

[project.optional-dependencies]
mypy = [
  "mypy >= 1.14",
  "pandas-stubs >= 2.2.3"
]
jupyter = [
  "pip",
  "ipykernel",
]
benchmark = [
  "py-spy",
]

[dependency-groups]
dev = [
  "generate-database-sqdt[mypy,jupyter,benchmark]",
]

[project.scripts]
generate_database = "generate_database_sqdt:main.main"


[tool.setuptools.dynamic]
version = {attr = "generate_database_sqdt.__version__"}


[tool.ruff]
line-length = 120
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
  # # FIXME: we should fix these in the future
  "PLR0913",  # Too many arguments in function definition (... > 5)
  "D1",  # FIXME: remove once more docstrings are added
  "TRY003",  # Avoid specifying long messages outside the exception class
  "EM",  # Exceptions ...
  # We don't use the following rules
  "COM812",  # (missing-trailing-comma) incompatible with ruff format
  "D203",  # (incorrect-blank-line-before-class) incompatible with D211: no-blank-line-before-class
  "D213",  # (multi-line-summary-second-line) incompatible with D212: multi-line-summary-first-line
  "SIM114",  # Combine if branches using logical or operator; this breaks mypy, so we disable it for now
  "TD",  # Linting TODOs; we dont need this
  "FIX",  # Disallow TODOs, FIXMEs, etc.; enforcing this is a bit too strict
  "E741",  # Ambiguous variable name, does not like quantum number 'l'
  "S608",  # hardcoded-sql-expression
]
flake8-tidy-imports.ban-relative-imports = "all"
mccabe.max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true


[tool.mypy]
strict = true
disallow_untyped_decorators = false
ignore_missing_imports = true
