[project]
name = "database-sqdt"
version = "1.3"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
dependencies = ["rydstate >= 0.10"]


[tool.uv.sources]
rydstate = { path = "RydState", editable = true }


[dependency-groups]
dev = [
  "pip",
  "ipykernel",
  "py-spy",
]
